--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hello</h1>
-</body>
-</html>
+<h1 id="hamdocumentation">HAM` documentation</h1>
+<hr />
+<p>Welcome the the HAM` docs</p>
+<ul>
+<li>[bob]()</li>
+</ul>
+<script src="loadIndex.js"></script>
