--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="hamdocumentation">HAM` documentation</h1>
 <hr />
 <p>Welcome the the HAM` docs</p>
 <ul>
-<li>[bob]()</li>
+<li><a href="howTo.html">How to install</a></li>
 </ul>
 <script src="loadIndex.js"></script>
