--- a/Keywords.html
+++ b/Keywords.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="resources/stylesheet.css">
-<h1 id="hi">Hi!</h1>
+<h1 id="keywords">Keywords</h1>
+<hr />
 <script src="loadIndex.js"></script>
