--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="hamdocumentation">HAM` documentation</h1>
 <hr />
-<p>Welcome the the HAM` docs</p>
+<h2 id="getstarted">Get Started</h2>
 <ul>
-<li><a href="howTo.html">How to install</a></li>
+<li><a href="HowTo.html">How to install</a></li>
+<li><a href="Demo.html">First program</a></li>
+<li><a href="Notes.html">Important Notes</a></li>
+</ul>
+<h2 id="documentation">Documentation</h2>
+<ul>
+<li><a href="Types.html">Types</a></li>
+<li><a href="Variables.html">Variables</a></li>
+<li><a href="Keywords.html">Keywords</a></li>
 </ul>
 <script src="loadIndex.js"></script>
