--- a/resources/mandatory/template.html
+++ b/resources/mandatory/template.html
@@ -11,14 +11,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
     <link rel="stylesheet" href="resources/stylesheet.css">
 </head>
-<body style="background-color: rgb(73, 73, 73);">
+<body style="background-color: rgb(72,72,72);">
     <div class="sidenav">
         <a href="index.html">Home</a>
         <!-- !IN_NAV -->
     </div>
       
-      <div id="__main__">
+    <div id="__main__"></div>
 
-      </div>
+    <div id="__right__"></div>
+
+      
 </body>
 </html>
