--- a/website/Demo.html
+++ b/website/Demo.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="writingyourfirsthamprogram">Writing your first HAM` Program</h1>
 <hr />
 <p>Start by following <a href="HowTo.html">these instructions</a>, and entering the <code>compiler</code> directory.</p>
@@ -19,4 +18,5 @@ Inside of this function, we can now do anything we want:</p>
 <p>If it all worked correctly, you should see:</p>
 <pre><code>Hello World!
 </code></pre>
+</body>
 <script src="loadIndex.js"></script>
