--- a/website/Notes.html
+++ b/website/Notes.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="someimportantnotes">Some Important Notes</h1>
+</body>
 <script src="loadIndex.js"></script>
