--- a/website/Variables.html
+++ b/website/Variables.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="variables">Variables</h1>
 <hr />
 <h2 id="creating">Creating</h2>
@@ -8,4 +7,5 @@ create &lt;type&gt; &lt;name&gt; &lt;- &lt;value&gt;;
 create &lt;type&gt; &lt;name&gt;;
 </code></pre>
 <h2 id="setting">Setting</h2>
+</body>
 <script src="loadIndex.js"></script>
