--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="hamdocumentation">HAM` documentation</h1>
 <hr />
 <h2 id="getstarted">Get Started</h2>
@@ -11,6 +10,8 @@
 <ul>
 <li><a href="Types.html">Types</a></li>
 <li><a href="Variables.html">Variables</a></li>
-<li><a href="Keywords.html">Keywords</a></li>
+<li>Keywords<ul>
+<li><a href="Keywords/call.html">call</a></li></ul></li>
 </ul>
+</body>
 <script src="loadIndex.js"></script>
