--- a/website/HowTo.html
+++ b/website/HowTo.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="resources/stylesheet.css">
 <h1 id="howto">How To</h1>
 <hr />
 <h2 id="dependencies">Dependencies</h2>
@@ -37,4 +36,5 @@
 <li>Linux<ul>
 <li>Run <code>.compiler/scripts/internal/assemble_x11.sh</code></li></ul></li>
 </ul>
+</body>
 <script src="loadIndex.js"></script>
