--- a/website/Examples/Demo.html
+++ b/website/Examples/Demo.html
@@ -19,4 +19,4 @@ Inside of this function, we can now do anything we want:</p>
 <pre><code>Hello World!
 </code></pre>
 </body>
-<script src="loadIndex.js"></script>
+<script src="../loadIndex.js"></script>
