--- a/website/Examples/HowTo.html
+++ b/website/Examples/HowTo.html
@@ -37,4 +37,4 @@
 <li>Run <code>.compiler/scripts/internal/assemble_x11.sh</code></li></ul></li>
 </ul>
 </body>
-<script src="loadIndex.js"></script>
+<script src="../loadIndex.js"></script>
