--- a/website/index.html
+++ b/website/index.html
@@ -2,16 +2,20 @@
 <hr />
 <h2 id="getstarted">Get Started</h2>
 <ul>
-<li><a href="HowTo.html">How to install</a></li>
-<li><a href="Demo.html">First program</a></li>
+<li><a href="Examples/HowTo.html">How to install</a></li>
+<li><a href="Examples/Demo.html">First program</a></li>
 <li><a href="Notes.html">Important Notes</a></li>
 </ul>
 <h2 id="documentation">Documentation</h2>
 <ul>
-<li><a href="Types.html">Types</a></li>
-<li><a href="Variables.html">Variables</a></li>
+<li>Variables<ul>
+<li><a href="Variables/usage.html">Usage</a></li>
+<li><a href="Variables/types.html">Types</a></li></ul></li>
+<li>Arrays<ul>
+<li><a href="Arrays/usage.html">Usage</a></li></ul></li>
 <li>Keywords<ul>
-<li><a href="Keywords/call.html">call</a></li></ul></li>
+<li><a href="Keywords/call.html">call</a></li>
+<li><a href="Keywords/persistent.html">persistent</a></li></ul></li>
 </ul>
 </body>
 <script src="loadIndex.js"></script>
