--- a/website/Notes.html
+++ b/website/Notes.html
@@ -1,5 +1,5 @@
 <h1 id="someimportantnotes">Some Important Notes</h1>
 <hr />
-<p>I wanted something like <code>ReadTheDocs</code>, but hate Python and whatever Sphinx is. So I made mt own quick library that builds a quick documentation website from a folder with markdown files. See the code <a href="https://github.com/FISHARMNIC/HAMprimeDocs">here</a>.</p>
+<p>I wanted something like <code>ReadTheDocs</code>, but hate Python and whatever Sphinx is. So I made mt own quick library that builds a documentation website from a folder with markdown files. See the code <a href="https://github.com/FISHARMNIC/HAMprimeDocs">here</a>.</p>
 </body>
 <script src="loadIndex.js"></script>
