--- a/website/Variables/types.html
+++ b/website/Variables/types.html
@@ -10,5 +10,7 @@ u8 : 8-bit  number (signed char)
 p16: Pointer to a 16-bit number (short int *)
 p8 : Pointer to a 8-bit  number (signed char *)
 </code></pre>
+<h2 id="formats">Formats</h2>
+<p>After declaring a format, the name of the format can now be used as a regular type. See <code>formats</code>.</p>
 </body>
 <script src="../loadIndex.js"></script>
