--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,9 @@
 <li>Keywords<ul>
 <li><a href="Keywords/call.html">call</a></li>
 <li><a href="Keywords/persistent.html">persistent</a></li></ul></li>
+<li>Formats<ul>
+<li><a href="Formats/usage.html">Formats as structures</a></li>
+<li><a href="Formats/class.html">Formats as classes</a></li></ul></li>
 </ul>
 </body>
 <script src="loadIndex.js"></script>
