--- a/website/index.html
+++ b/website/index.html
@@ -9,16 +9,22 @@
 <h2 id="documentation">Documentation</h2>
 <ul>
 <li>Variables<ul>
-<li><a href="Variables/usage.html">Usage</a></li>
-<li><a href="Variables/types.html">Types</a></li></ul></li>
+<li><a href="Variables/Usage.html">Usage</a></li>
+<li><a href="Variables/Types.html">Types</a></li></ul></li>
 <li>Arrays<ul>
-<li><a href="Arrays/usage.html">Usage</a></li></ul></li>
+<li><a href="Arrays/Usage.html">Usage</a></li></ul></li>
 <li>Keywords<ul>
-<li><a href="Keywords/call.html">call</a></li>
-<li><a href="Keywords/persistent.html">persistent</a></li></ul></li>
+<li><a href="Keywords/Call.html">call</a></li>
+<li><a href="Keywords/Persistent.html">persistent</a></li>
+<li><a href="Keywords/__Rule.html">__rule</a></li>
+<li><a href="Keywords/__define.html">__Define</a></li>
+<li><a href="Keywords/Import.html">import</a></li>
+<li><a href="Keywords/Forward.html">forward</a></li>
+<li><a href="Keywords/__ccalled__.html">__ccalled__</a></li>
+<li><a href="Keywords/Include.html">include</a></li></ul></li>
 <li>Formats<ul>
-<li><a href="Formats/usage.html">Formats as structures</a></li>
-<li><a href="Formats/class.html">Formats as classes</a></li></ul></li>
+<li><a href="Formats/Usage.html">Formats as structures</a></li>
+<li><a href="Formats/Class.html">Formats as classes</a></li></ul></li>
 </ul>
 </body>
 <script src="loadIndex.js"></script>
